--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationModel.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
 </head>
@@ -290,7 +292,7 @@
     </div>
 </div>
 <script src="js/public.js"></script>
-<script src="js/evaluationModel.js"></script>
+<script src="js/evaluationModel.js" type="text/babel"></script>
 <script>
     $(".conList li:eq(0)").children("ul").show();
     $(".first p").click(function () {
