--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationObject.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
 </head>
@@ -170,6 +172,6 @@
     </div>
 </div>
 </body>
-<script src="js/public.js"></script>
-<script src="js/evaluationObject.js"></script>
+<script src="js/public.js" type="text/javascript"></script>
+<script src="js/evaluationObject.js" type="text/babel"></script>
 </html>
