--- a/infoSecurity.html
+++ b/infoSecurity.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/evaluationObject.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
 </head>
@@ -116,5 +118,5 @@
 </div>
 </body>
 <script src="js/public.js"></script>
-<script src="js/infoSecurity.js"></script>
+<script src="js/infoSecurity.js" type="text/babel"></script>
 </html>
