--- a/management.html
+++ b/management.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/template.css">
     <link rel="stylesheet" href="css/management.css">
     <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="js/browser.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
     <script src="js/vue.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
 </head>
@@ -265,7 +267,7 @@
     </div>
 </div>
 <script src="js/public.js"></script>
-<script src="js/management.js"></script>
+<script src="js/management.js" type="text/babel"></script>
 <script>
     $(function () {
         var docHeight = window.innerHeight || document.documentElement.clientHeight;
