--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         var docHeight = window.innerHeight || document.documentElement.clientHeight;
         var docWidth = window.innerWidth || document.documentElement.clientWidth;
         if (docWidth <= 1366) {
-            $("#table,.rankList ul").css("max-height", docHeight - 282);
+            $("#table,.rankList ul").css({"max-height": docHeight - 282});
         } else {
             $("#table,.rankList ul").css("max-height", docHeight - 382);
             $("#alarms").css("max-height", docHeight - 720);
