--- a/infoSecurity.html
+++ b/infoSecurity.html
@@ -111,7 +111,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="btnList"><a class="btn" @click="infoSecurity">保存</a><a class="btn1" @click="cancel">取消</a></div>
+                <div class="btnList"><a class="btn" @click="infoSecurity">保存</a><a class="btn1" href="evaluationObject.html">取消</a></div>
             </div>
         </div>
     </div>
