--- a/evaluationResultDetail.html
+++ b/evaluationResultDetail.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="wap-font-scale" content="no">
     <link rel="stylesheet" href="css/template.css">
-    <link rel="stylesheet" href="css/evaluationResult.css">
+    <link rel="stylesheet" href="css/evaluationResultDetail.css">
     <script src="js/jquery-2.2.3.min.js"></script>
     <script src="js/vue.js"></script>
     <script type="text/javascript" src="js/nav.js"></script>
